# rk3506-smart-panel

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
configs/: AppConfig.h
docs/: AudioPlayer_Design.md  MODERNIZATION_SUMMARY.md  MODERN_CPP17_IMPROVEMENTS.md  MODERN_CPP17_QUICK_REFERENCE.md  namespace_demo.md  sensor_design.md
examples/: modern_cpp17_usage.cpp  sensor_example.cpp
include/: main.h
include/app/: CityData.h  LyricParser.h  MusicApp.h  VideoApp.h  WeatherApp.h
include/fonts/: qweather_icons.h
include/hal/: AudioDecoder.h  AudioOutput.h  AudioPlayer.h  CpuAffinity.h  DeviceNode.h  HttpClient.h  ThreadPool.h  VideoPlayer.h
include/sensor/: Buzzer.h  Dht11.h  Mpu6050.h
src/: main.cpp
src/app/: CityData.cpp  LyricParser.cpp  MusicApp.cpp  VideoApp.cpp  WeatherApp.cpp
src/hal/: AudioDecoder.cpp  AudioOutput.cpp  AudioPlayer.cpp  DeviceNode.cpp  HttpClient.cpp  ThreadPool.cpp  VideoPlayer.cpp
src/sensor/: Dht11.cpp  Mpu6050.cpp
src/ui/: .eez-project-build  actions.h  eez_actions.cpp  fonts.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_image_buzzer.c  ui_image_camera.c  ui_image_cpu.c  ui_image_doubao.c  ui_image_image.c  ui_image_led.c  ui_image_list.c  ui_image_music.c  ui_image_next.c  ui_image_off.c  ui_image_pause.c  ui_image_play.c  ui_image_pre.c  ui_image_sensor.c  ui_image_setting.c  ui_image_setting2.c  ui_image_sound.c  ui_image_video.c  ui_image_weather.c  vars.h
